--- a/Apteka.Module.Win/Apteka.Module.Win.csproj
+++ b/Apteka.Module.Win/Apteka.Module.Win.csproj
@@ -189,6 +189,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\WinExportInvoiceController.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controllers\WinImportInvoiceController.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="WinModule.cs">
       <SubType>Component</SubType>
     </Compile>
