--- a/Apteka.Web/Web.config
+++ b/Apteka.Web/Web.config
@@ -15,33 +15,24 @@
       <section name="settings" requirePermission="false" type="DevExpress.Web.SettingsConfigurationSection, DevExpress.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
       <section name="resources" requirePermission="false" type="DevExpress.Web.ResourcesConfigurationSection, DevExpress.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     </sectionGroup>
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <devExpress>
     <settings rightToLeft="false" doctypeMode="Html5" ieCompatibilityVersion="edge" />
     <compression enableHtmlCompression="true" enableCallbackCompression="true" enableResourceCompression="true" enableResourceMerging="true" />
     <themes enableThemesAssembly="true" theme="Office2010Blue" />
     <resources>
-      <add type="ThirdParty"/>
-      <add type="DevExtreme"/>
+      <add type="ThirdParty" />
+      <add type="DevExtreme" />
     </resources>
   </devExpress>
   <appSettings>
     <add key="Modules" value="" />
     <add key="ErrorReportEmail" value="" />
     <add key="ErrorReportEmailServer" value="" />
-    <!--
-    <add key="ErrorReportEmailSubject" value="{0:ExceptionMessage}"/>
-    <add key="ErrorReportEmailFrom" value="null@nospam.com"/>
-    <add key="ErrorReportEmailFromName" value="{0:ApplicationName} Error handling system"/>    
-    <add key="Languages" value="de;es;ja;ru" />
-    -->
     <add key="SimpleErrorReportPage" value="" />
     <add key="RichErrorReportPage" value="Error.aspx" />
     <add key="EnableDiagnosticActions" value="False" />
-    <!-- 
-    Use the one of predefined values: None, ApplicationFolder. The default value is ApplicationFolder.
-    <add key="TraceLogLocation" value="ApplicationFolder"/>
-    -->
+    <add key="Languages" value="ru" />
   </appSettings>
   <connectionStrings>
     <add name="EasyTestConnectionString" connectionString="Integrated Security=SSPI;Data Source=(localdb)\mssqllocaldb;Initial Catalog=AptekaEasyTest" />
@@ -64,14 +55,14 @@
   </system.diagnostics>
   <system.webServer>
     <handlers>
-      <add name="ASPxUploadProgressHandler" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" preCondition="integratedMode"/>
-      <add name="XafHttpHandler" path="DXX.axd" verb="*" type="DevExpress.ExpressApp.Web.XafHttpHandler, DevExpress.ExpressApp.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" preCondition="integratedMode"/>    
+      <add name="ASPxUploadProgressHandler" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" preCondition="integratedMode" />
+      <add name="XafHttpHandler" path="DXX.axd" verb="*" type="DevExpress.ExpressApp.Web.XafHttpHandler, DevExpress.ExpressApp.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" preCondition="integratedMode" />    
       <add name="ASPxHttpHandlerModuleXAF" path="DXXRD.axd" verb="GET,POST" type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" preCondition="integratedMode" />
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
-      <add name="ASPxHttpHandlerModule" type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a"/>
-      <add name="XafHttpModule" type="DevExpress.ExpressApp.Web.XafHttpModule, DevExpress.ExpressApp.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a"/>
+      <add name="ASPxHttpHandlerModule" type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+      <add name="XafHttpModule" type="DevExpress.ExpressApp.Web.XafHttpModule, DevExpress.ExpressApp.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     </modules>
   </system.webServer>
   <system.web>
@@ -84,7 +75,7 @@
     </httpHandlers>
     <httpModules>
       <add name="ASPxHttpHandlerModule" type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-      <add name="XafHttpModule" type="DevExpress.ExpressApp.Web.XafHttpModule, DevExpress.ExpressApp.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a"/>
+      <add name="XafHttpModule" type="DevExpress.ExpressApp.Web.XafHttpModule, DevExpress.ExpressApp.Web.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     </httpModules>
     <!--
     Set compilation debug="true" to insert debugging
@@ -160,7 +151,7 @@
   <location path="Images">
     <system.web>
       <authorization>
-        <allow users="?"/>
+        <allow users="?" />
       </authorization>
     </system.web>
   </location>
