--- a/Apteka.Win/App.config
+++ b/Apteka.Win/App.config
@@ -1,21 +1,19 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    </configSections>
   <runtime>
     <loadFromRemoteSources enabled="true" />
   </runtime>
   <appSettings>
-    <add key="Modules" value=""/>
-    <add key="NewVersionServer" value=""/>
-    <add key="EnableDiagnosticActions" value="False"/>
-    <!--
-    Use the one of predefined values: None, ApplicationFolder, CurrentUserApplicationDataFolder. The default value is ApplicationFolder.
-    <add key="TraceLogLocation" value="CurrentUserApplicationDataFolder"/>
-    <add key="UserModelDiffsLocation" value="CurrentUserApplicationDataFolder"/>
-    <add key="Languages" value="de;es;ja;ru"/>
-    -->
+    <add key="Modules" value="" />
+    <add key="NewVersionServer" value="" />
+    <add key="EnableDiagnosticActions" value="False" />
+    <add key="Languages" value="ru" />
   </appSettings>
   <connectionStrings>
-    <add name="EasyTestConnectionString" connectionString="Integrated Security=SSPI;Data Source=(localdb)\mssqllocaldb;Initial Catalog=AptekaEasyTest"/>
+    <add name="EasyTestConnectionString" connectionString="Integrated Security=SSPI;Data Source=(localdb)\mssqllocaldb;Initial Catalog=AptekaEasyTest" />
     <add name="ConnectionString" connectionString="Integrated Security=SSPI;MultipleActiveResultSets=True;Data Source=(localdb)\mssqllocaldb;Initial Catalog=Apteka" providerName="System.Data.SqlClient" />
     <!--
     Use the following connection string to connect to a Jet (Microsoft Access) database:
@@ -25,13 +23,13 @@
   <system.diagnostics>
     <switches>
       <!-- Use the one of predefined values: 0-Off, 1-Errors, 2-Warnings, 3-Info, 4-Verbose. The default value is 3. -->
-      <add name="eXpressAppFramework" value="3"/>
+      <add name="eXpressAppFramework" value="3" />
       <!--
       <add name="XPO" value="3" />
       -->
     </switches>
   </system.diagnostics>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
 </configuration>
