--- a/Apteka.Module/Apteka.Module.csproj
+++ b/Apteka.Module/Apteka.Module.csproj
@@ -154,7 +154,7 @@
     <Compile Include="ModelExtensions\ModelClassUpdater.cs" />
     <Compile Include="ModelExtensions\ModelMemberUpdater.cs" />
     <Compile Include="ModelExtensions\ModelViewsGeneratorUpdater.cs" />
-    <Compile Include="ObjectSpaceEntityFactory.cs" />
+    <Compile Include="Factories\ObjectSpaceEntityFactory.cs" />
     <Compile Include="Migrations\201905241005038_InitialCreate.cs" />
     <Compile Include="Migrations\201905241005038_InitialCreate.Designer.cs">
       <DependentUpon>201905241005038_InitialCreate.cs</DependentUpon>
