--- a/Apteka.Win/App.config
+++ b/Apteka.Win/App.config
@@ -13,12 +13,12 @@
     <add key="Languages" value="ru" />
   </appSettings>
   <connectionStrings>
+    <!--
     <add name="EasyTestConnectionString" connectionString="Integrated Security=SSPI;Data Source=(localdb)\mssqllocaldb;Initial Catalog=AptekaEasyTest" />
     <add name="ConnectionString" connectionString="Integrated Security=SSPI;MultipleActiveResultSets=True;Data Source=(localdb)\mssqllocaldb;Initial Catalog=Apteka" providerName="System.Data.SqlClient" />
-    <!--
-    Use the following connection string to connect to a Jet (Microsoft Access) database:
     <add name="ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Password=;User ID=Admin;Data Source=Apteka.mdb;Mode=Share Deny None;"/>
     -->
+    <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=DNIKIFOROV3\SQLEXPRESS;Initial Catalog=Apteka" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.diagnostics>
     <switches>
