--- a/Apteka.Api/Properties/launchSettings.json
+++ b/Apteka.Api/Properties/launchSettings.json
@@ -19,6 +19,7 @@
     "Apteka.Api": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
