Добавлены лекарственные средства

--- a/Apteka.Api/Apteka.Api.csproj
+++ b/Apteka.Api/Apteka.Api.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Apteka.Model\Apteka.Model.csproj" />
+    <ProjectReference Include="..\Apteka.Model.EFCore\Apteka.Model.EFCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
