--- a/Apteka.Module/Apteka.Module.csproj
+++ b/Apteka.Module/Apteka.Module.csproj
@@ -148,6 +148,14 @@
     <Compile Include="Migrations\201906011726576_Init.Designer.cs">
       <DependentUpon>201906011726576_Init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906041713033_Medicine.cs" />
+    <Compile Include="Migrations\201906041713033_Medicine.Designer.cs">
+      <DependentUpon>201906041713033_Medicine.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906041842452_Medicine2.cs" />
+    <Compile Include="Migrations\201906041842452_Medicine2.Designer.cs">
+      <DependentUpon>201906041842452_Medicine2.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModelExtensions\ModelClassUpdater.cs" />
     <Compile Include="ModelExtensions\ModelMemberUpdater.cs" />
     <Compile Include="ModelExtensions\DetailViewLayoutGeneratorUpdater.cs" />
@@ -166,6 +174,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201906011726576_Init.resx">
       <DependentUpon>201906011726576_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906041713033_Medicine.resx">
+      <DependentUpon>201906041713033_Medicine.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906041842452_Medicine2.resx">
+      <DependentUpon>201906041842452_Medicine2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
     <EmbeddedResource Include="Module.resx">
